[package]
name = "MnSH_Hub"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
image = "0.25.10"
indicatif = "0.18.4"
lopdf = "0.40.0"
mime_guess = "2.0.5"
pdf-docx = "1.0.0-beta.6"
qrcode = "0.14.1"
tempfile = "3.27.0"
walkdir = "2.5.0"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = [
    "stream",
    "json"
] }
futures-util = "0.3"
zip-extract = "0.2"